# DiscordManagerBot

./: .breakpoints  README.md  database format  main.py  music.py  pyproject.toml  rolereact.py
cogs/: filter.py  info.py  meme.py  mute.py  prefix.py  quiz.py  rules.py
