[tool.poetry]
name = "repl_python3_DiscordManagerBot"
version = "0.1.0"
description = ""
authors = ["NoahBReef <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
praw = "^7.5.0"
replit = "^3.2.4"
Flask = "^2.0.1"
click8 = "^8.0.1"
pandas = "^1.3.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
