[tool.poetry]
name = "discordmanagerbot"
version = "0.1.0"
description = ""
authors = ["NoahBReef <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.3.4"
praw = "^7.5.0"
replit = "^3.2.4"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
